--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,8 +10,10 @@
     "check": "svelte-check --tsconfig ./tsconfig.json"
   },
   "devDependencies": {
+    "@primer/octicons": "^18.3.0",
     "@sveltejs/vite-plugin-svelte": "^2.0.4",
     "@tsconfig/svelte": "^4.0.1",
+    "@types/primer__octicons": "^17.11.0",
     "svelte": "^3.49.0",
     "svelte-check": "^3.2.0",
     "svelte-preprocess": "^5.0.3",
