--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -13,7 +13,24 @@
      * of JS in `.svelte` files.
      */
     "allowJs": true,
-    "checkJs": true
+    "checkJs": true,
+    "paths": {
+        "components/*": [
+            "src/components/*"
+        ],
+        "scripts/*": [
+            "src/scripts/*"
+        ],
+        "stores/*": [
+            "src/stores/*"
+        ],
+        "style/*": [
+            "src/style/*"
+        ],
+        "src/*": [
+            "src/*"
+        ],
+    },
   },
   "include": [
     "src/**/*.d.ts",
