refactor: reorganize context menus

--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -18,6 +18,9 @@
         "components/*": [
             "src/components/*"
         ],
+        "context-menus/*": [
+            "src/context-menus/*"
+        ],
         "events/*": [
             "src/events/*"
         ],
