--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "@tsconfig/svelte": "^4.0.1",
     "@types/node": "^20.2.3",
     "@types/primer__octicons": "^17.11.0",
+    "sass": "^1.62.1",
     "svelte": "^3.49.0",
     "svelte-check": "^3.2.0",
     "svelte-preprocess": "^5.0.3",
