--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "devDependencies": {
     "@primer/octicons": "^18.3.0",
     "@sveltejs/vite-plugin-svelte": "^2.3.0",
+    "@tauri-apps/api": "^1.3.0",
     "@tauri-apps/cli": "^1.3.1",
     "@tsconfig/svelte": "^4.0.1",
     "@types/node": "^20.2.3",
