--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -33,6 +33,9 @@
         "style/*": [
             "src/style/*"
         ],
+        "actions/*": [
+            "src/actions/*"
+        ],
         "src/*": [
             "src/*"
         ],
