--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -28,7 +28,7 @@ jobs:
       - name: Build for darwin
         if: matrix.platform == 'macos-latest'
         run: |
-          wails build -platform darwin/universal
+          GOGC=100 GOMEMLIMIT=1000MiB wails build -platform darwin/universal
 
       - name: Create darwin package
         if: matrix.platform == 'macos-latest'
@@ -48,7 +48,7 @@ jobs:
       - name: Build for windows
         if: matrix.platform == 'windows-latest'
         run: |
-          wails build -platform windows/amd64 -nsis
+          GOGC=100 GOMEMLIMIT=1000MiB wails build -platform windows/amd64 -nsis
           Compress-Archive -Path "$PWD\build\bin\Ivy Git.exe" -DestinationPath "$PWD\IvyGit_${{ github.ref_name }}_Windows_amd64.zip"
           Move-Item -Path "$PWD\build\bin\Ivy Git-amd64-installer.exe" -Destination "$PWD\IvyGit_${{ github.ref_name }}_Windows_amd64_installer.exe"
 
