--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -48,7 +48,7 @@ jobs:
       - name: Build for windows
         if: matrix.platform == 'windows-latest'
         run: |
-          GOGC=100 GOMEMLIMIT=1000MiB wails build -platform windows/amd64 -nsis
+          cmd /v /c "set GOGC=100 && set GOMEMLIMIT=1000MiB && wails build -platform windows/amd64 -nsis"
           Compress-Archive -Path "$PWD\build\bin\Ivy Git.exe" -DestinationPath "$PWD\IvyGit_${{ github.ref_name }}_Windows_amd64.zip"
           Move-Item -Path "$PWD\build\bin\Ivy Git-amd64-installer.exe" -Destination "$PWD\IvyGit_${{ github.ref_name }}_Windows_amd64_installer.exe"
 
