--- a/debian/control
+++ b/debian/control
@@ -2,7 +2,7 @@ Source: ivy-git
 Section: Git
 Priority: optional
 Maintainer: Emma Litwa-Vulcu <80431903+reiniiriarios@users.noreply.github.com>
-Build-Depends: debhelper-compat (= 13), golang-1.21, libgtk3, libwebkit
+Build-Depends: debhelper-compat (= 13), build-essential, golang-1.21, libgtk-3-dev, libwebkit2gtk-4.0-dev, docker.io, pkg-config, npm
 Standards-Version: 4.6.0
 Homepage: https://ivygit.com
 #Vcs-Browser: https://salsa.debian.org/debian/ivy-git
